2003-07-14  Bernhard Held <bernhard@bernhardheld.de>

	* lib/fetch.mk: add "-z3" to cvs

2003-06-17  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: filter "cvs [checkout aborted]:",
	because of "cvs [checkout aborted]: could not find out home directory"

2003-06-06  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: stop sending logs to sdcc-buildlogs (nobody reads it, me included)
	send only mail to sdcc-devel, if there's an error, otherwise send it to the Admin

2003-05-13  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: removed "exec", so that cleanup() is finally called
	* support/error-filter.sh: added escapes to []()

2003-05-12  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: added lockfile mechanism

2003-05-09  Bernhard Held <bernhard@bernhardheld.de>

	* local/ucf-cf-ppc-macosx-2.mk: enable ucsim, it compiles cleanly with g++2

2003-05-08  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: filter messages from CVS retries

2003-05-07  Bernhard Held <bernhard@bernhardheld.de>

	* lib/ports.mk: don't include ports/z80.mk and ports/gbz80.mk.
	This only disables the checkout of maccer, gbdk-lib and gbdk-support,
	there was no further functionality.

2003-05-06  Bernhard Held <bernhard@bernhardheld.de>

	* lib/fetch.mk: sdcc checkout with retry
	* components/sdcc-extra: sdcc-extra checkout with retry
	* components/sdcc.mk: removed MAKEJOBFLAGS for parallel build of regression tests;
	needs more testing on CF (creating DIRs, timeouts).
	Cleanup installing docs for mingw32

2003-05-05  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: retry `CVS co` in case of failure
	* lib/bootstrap.mk: added chmod to make sdcc-build-bootstrap.sh executable
	* components/sdcc.mk: added MAKEJOBFLAGS for parallel build of regression tests

2003-05-01  Bernhard Held <bernhard@bernhardheld.de>

	* local/ucf-cf-ppc-macosx-2.mk: added
